--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
+body {
+  color: #000000;
+  background-color: #FAF9F9;
+  font-family: urw-din, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+p {
+  font-family: urw-din, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 h1 {
   font-family: urw-din, sans-serif;
   font-weight: 600;
@@ -34,72 +48,18 @@ h6 {
   font-style: normal;
 }
 
-p {
-  font-family: urw-din, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
 hr {
   border-width: 2px;
   border-color: #555B6E;
 }
 
-ul:not(.exempt) {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  color: #F9F9F9;
-  background-color: #555B6E;
-
-  transition: background-color 200ms ease-in-out;
-}
-
-li:not(.exempt) {
-  border-right: 1px solid #F9F9F9;
-  float: left;
-}
-
-li:not(.exempt) a {
-  display: block;
-  color: #F9F9F9;
-  background-color: #555B6E;
-
-  font-family: urw-din, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  text-align: center;
-  text-decoration: none;
-  padding: 14px 16px;
-}
-
-li:last-child:not(.exempt) {
-  border-right: none;
-}
-
-li:not(.exempt) a:hover {
-  color: #000000;
-  background-color: #BEE3DB;
-}
-
-body {
-  color: #000000;
-  background-color: #FAF9F9;
-}
-
 .button {
   color: #000000;
   background-color: #FFD6BA;
-
   border: none;
   border-radius: 15px;
-
-  font-family: urw-din, sans-serif;
-  font-weight: 400;
-  font-style: normal;
+  text-decoration: none;
   padding: 10px 50px;
-
   transition: background-color 200ms ease-in-out;
 }
 
@@ -113,8 +73,131 @@ body {
   background-color: #555B6E;
 }
 
-.exempt {
-  font-family: urw-din, sans-serif;
-  font-weight: 400;
-  font-style: normal;
+.image {
+  float: left;
+  border-radius: 50%;
+  padding: 10px;
+  width: 150px;
+}
+
+@media screen and (max-width: 415px) {
+  .container {
+    display: grid;
+    grid-template-rows: auto auto auto auto auto auto auto;
+    gap: 20px;
+  }
+
+  .navigation {
+    grid-row: 1 / 2;
+    display: grid;
+    overflow: hidden;
+    background-color: #555B6E;
+  }
+
+  .navigation a {
+    float: left;
+    color: #FAF9F9;
+    text-align: left;
+    text-decoration: none;
+    padding: 14px 16px;
+  }
+
+  .navigation a:hover {
+    color: #000000;
+    background-color: #BEE3DB;
+  }
+
+  .navigation a:active {
+    color: #FAF9F9;
+    background-color: #555B6E;
+  }
+
+  .navigation a.active {
+    color: #000000;
+    background-color: #FFD6BA;
+  }
+
+  .header {
+    grid-row: 2 / 3;
+  }
+
+  .goals {
+    grid-row: 3 / 4;
+  }
+
+  .about {
+    grid-row: 4 / 5;
+  }
+
+  .bonus {
+    grid-row: 5 / 6;
+  }
+
+  .library {
+    grid-row: 6 / 7;
+  }
+}
+
+@media screen and (min-width: 416px) {
+  .container {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto auto;
+    gap: 20px;
+  }
+
+  .navigation {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    overflow: hidden;
+    background-color: #555B6E;
+  }
+
+  .navigation a {
+    float: left;
+    color: #FAF9F9;
+    text-align: center;
+    text-decoration: none;
+    padding: 14px 16px;
+  }
+
+  .navigation a:hover {
+    color: #000000;
+    background-color: #BEE3DB;
+  }
+
+  .navigation a:active {
+    color: #FAF9F9;
+    background-color: #555B6E;
+  }
+
+  .navigation a.active {
+    color: #000000;
+    background-color: #FFD6BA;
+  }
+
+  .header {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .goals {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+  }
+
+  .about {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
+
+  .bonus {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+  }
+
+  .library {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+  }
 }
