Updated navigation styling

--- a/css/master.css
+++ b/css/master.css
@@ -67,7 +67,7 @@ h6 {
     font-weight: 500;
     font-style: normal;
     font-size: 20px;
-    color: inherit;
+    color: #000000;
     background-color: transparent;
   }
 
@@ -78,6 +78,8 @@ h6 {
     padding-bottom: 30px;
     padding-left: 25px;
     padding-right: 25px;
+    color: #000000;
+    background-color: transparent;
   }
 
   .navigation a:hover {
@@ -87,7 +89,7 @@ h6 {
 
   .navigation a:visited {
     color: #000000;
-    background-color: inherit;
+    background-color: transparent;
   }
 
   .navigation a:active {
@@ -369,7 +371,7 @@ h6 {
     padding-left: 25px;
     padding-right: 25px;
     color: #000000;
-    background-color: inherit;
+    background-color: transparent;
   }
 
   .navigation a:hover {
@@ -379,7 +381,7 @@ h6 {
 
   .navigation a:visited {
     color: #000000;
-    background-color: inherit;
+    background-color: transparent;
   }
 
   .navigation a:active {
