--- a/assignments/sheets/assignments.css
+++ b/assignments/sheets/assignments.css
@@ -1,8 +1,25 @@
-button {
-  transition: color 1000ms ease-in-out;
-  font-size: 60px;
+body {
+    text-align: center;
 }
 
-.is-red {
-  color: red;
+#title {
+    font-size: 50px;
+}
+
+#prompt {
+    font-size: 25px;
+}
+
+#hidden {
+    display: none;
+}
+
+#button1 {
+    display: none;
+    margin: auto;
+    border-radius: 10px;
+    border: 1px solid #555B6E;
+    padding: 5px;
+    color: inherit;
+    background-color: rgb(245, 245, 245, .75);
 }
