--- a/css/master.css
+++ b/css/master.css
@@ -48,10 +48,17 @@ h6 {
         width: 100%;
         margin: 0;
         color: #000000;
-        background-color: #FAF9F9;
+        background-color: #FFFFFF;
         font-family: urw-din, sans-serif;
         font-weight: 400;
         font-style: normal;
+    }
+
+    .container {
+        text-align: center;
+    }
+
+    .content {
         background-image: url('../assets/mobile_bg.jpeg');
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -74,10 +81,7 @@ h6 {
     .navigation a {
         text-align: center;
         text-decoration: none;
-        padding-top: 30px;
-        padding-bottom: 30px;
-        padding-left: 25px;
-        padding-right: 25px;
+        padding: 30px 25px 30px 25px;
         color: #000000;
         background-color: transparent;
     }
@@ -97,12 +101,8 @@ h6 {
         background-color: #555B6E;
     }
 
-    .logo {
+    .logolink {
         display: none;
-    }
-
-    .container {
-        text-align: center;
     }
 
     .desktop-head {
@@ -128,7 +128,73 @@ h6 {
     .mobile-subhead2 {
         font-family: 'urw-din', sans-serif;
         font-size: 18px;
-        margin: 0px;
+        margin-top: 0px;
+    }
+
+    .slideshow {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: -1;
+        overflow: hidden;
+        text-align: center;
+    }
+
+    .carousel {
+        text-align: center;
+        display: none;
+        overflow: hidden;
+    }
+
+    .showcase {
+        width: 390px;
+        margin-top: 150px;
+    }
+
+    .dot {
+        cursor: pointer;
+        height: 15px;
+        width: 15px;
+        margin: 0 2px;
+        background-color: #555B6E;
+        border-color: #FAF9F9;
+        border-width: 5 px;
+        border-style: solid;
+        border-radius: 50%;
+        display: inline-block;
+        transition: border-color 0.6s ease;
+    }
+
+    .active {
+        background-color: #BEE3DB;
+        border-color: #666;
+    }
+
+    .fade {
+        -webkit-animation-name: fade-image;
+        -webkit-animation-duration: 1.5s;
+        animation-name: fade-image;
+        animation-duration: 1.5s;
+    }
+
+    @-webkit-keyframes fade-image {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
+    }
+
+    @keyframes fade-image {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
     }
 
     .gallery {
@@ -193,7 +259,7 @@ h6 {
     }
 
     .project-page {
-        display: grid;
+        /* display: grid; */
         grid-template-columns: auto;
         grid-template-rows: repeat(5, auto);
         grid-gap: 15px;
@@ -340,10 +406,17 @@ h6 {
         width: 100%;
         margin: 0;
         color: #000000;
-        background-color: #FAF9F9;
+        background-color: #FFFFFF;
         font-family: urw-din, sans-serif;
         font-weight: 400;
         font-style: normal;
+    }
+
+    .container {
+        text-align: center;
+    }
+
+    .content {
         background-image: url('../assets/desktop_bg.jpeg');
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -366,10 +439,7 @@ h6 {
     .navigation a {
         text-align: center;
         text-decoration: none;
-        padding-top: 30px;
-        padding-bottom: 30px;
-        padding-left: 25px;
-        padding-right: 25px;
+        padding: 30px 25px 30px 25px;
         color: #000000;
         background-color: transparent;
     }
@@ -394,12 +464,10 @@ h6 {
         height: 45px;
         border-radius: 50%;
         overflow: hidden;
-        margin-left: 30px;
-        margin-right: 30px;
     }
 
-    .container {
-        text-align: center;
+    .cv {
+        margin-right: 15px;
     }
 
     .desktop-head {
@@ -424,6 +492,70 @@ h6 {
 
     .mobile-subhead2 {
         display: none;
+    }
+
+    .slideshow {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: -1;
+        overflow: hidden;
+    }
+
+    .carousel {
+        text-align: center;
+        display: none;
+        overflow: hidden;
+    }
+
+    .showcase {
+        width: 720px;
+    }
+
+    .dot {
+        cursor: pointer;
+        height: 15px;
+        width: 15px;
+        margin: 0 2px;
+        background-color: #555B6E;
+        border-color: #FAF9F9;
+        border-width: 5 px;
+        border-style: solid;
+        border-radius: 50%;
+        display: inline-block;
+        transition: border-color 0.6s ease;
+    }
+
+    .active {
+        background-color: #BEE3DB;
+        border-color: #666;
+    }
+
+    .fade {
+        -webkit-animation-name: fade-image;
+        -webkit-animation-duration: 1.5s;
+        animation-name: fade-image;
+        animation-duration: 1.5s;
+    }
+
+    @-webkit-keyframes fade-image {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
+    }
+
+    @keyframes fade-image {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
     }
 
     .gallery {
@@ -499,7 +631,7 @@ h6 {
     }
 
     .project-page {
-        display: grid;
+        /* display: grid; */
         width: 75%;
         grid-template-columns: repeat(2, auto);
         grid-template-rows: repeat(3, auto);
@@ -514,7 +646,6 @@ h6 {
     .details {
         grid-column: 1 / 3;
         grid-row: 1 / 2;
-        width: 75%;
         text-align: left;
     }
 
